colcon_ws/log/build_2022-09-10_04-36-21/dasc_robot/stderr.log
/root/colcon_ws/src/robot-framework/src/joystick_control.cpp: In member function ‘void JoystickController::takeoff()’:
/root/colcon_ws/src/robot-framework/src/joystick_control.cpp:62:60: error: ‘target_’ was not declared in this scope; did you mean ‘target_pos’?
   62 |       quad->cmdWorldPosition(target_pos[0], target_pos[1], target_[pos][2], 0,0);
      |                                                            ^~~~~~~
      |                                                            target_pos
/root/colcon_ws/src/robot-framework/src/joystick_control.cpp:62:68: error: ‘pos’ was not declared in this scope; did you mean ‘pow’?
   62 |       quad->cmdWorldPosition(target_pos[0], target_pos[1], target_[pos][2], 0,0);
      |                                                                    ^~~
      |                                                                    pow
make[2]: *** [CMakeFiles/joystick_controller.dir/build.make:63: CMakeFiles/joystick_controller.dir/src/joystick_control.cpp.o] Error 1
make[1]: *** [CMakeFiles/Makefile2:308: CMakeFiles/joystick_controller.dir/all] Error 2
make: *** [Makefile:141: all] Error 2
